--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   },
-  "homepage": "https://your-github-username.github.io/Task-Tracker"
+  "homepage": "https://github.com/Akhiofficial/task-tracker"
 }
